--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=your_project_key
-sonar.projectName=Your Project Name
+sonar.projectKey=sqp_98e646a6331c390600c2289a868721500b265745
+sonar.projectName=Healthy-FC
 sonar.projectVersion=1.0
-sonar.sources=src
+sonar.sources=http://localhost:9000/tutorials?id=Healthy-FC
